# zettaranc-skill

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  SKILL.md  package-lock.json  pyproject.toml  requirements.txt  skill.json
.github/workflows/: e2e-cron.yml  release.yml  rust-ci.yml  test.yml
.omc/: project-memory.json
.omc/state/: agent-replay-a0aa6c8d-0338-434b-ba05-f3309e3a90e6.jsonl  hud-stdin-cache.json  last-tool-error.json  subagent-tracking.json
.superpowers/sdd/: task-b0-report.md
api/services/: stock_service.py
docs/: CHANGELOG.md  CONTRIBUTING.md  ROADMAP.md  TODO.md  USER_GUIDE.md
examples/zettaranc-perspective/: .gitignore  README.md  SKILL.md
frontend/: index.html
knowledge/: breathing-theory.md  four-rhythms.md  harness.md  improvement-system.md  iron-butterfly.md  six-tracks-2026.md  three-best-principles.md  workflow.md
modules/: __init__.py  a_stock_data_client.py  backtest.py  backtest_six_step.py  bridge_client.py  cli.py  cli_commands.py  data_sync.py  database.py  datasource.py  dynamic_config.py  harness_updater.py  improvement_logger.py  indevs_client.py  indicators.py  industry_filter.py  intent_chat.py  intent_router.py  knowledge_retriever.py  llm_providers.py  log_analyzer.py  loop_engine.py  market_regime.py  monitor.py  notifier.py  portfolio_diagnosis.py  position_manager.py  review_generator.py  screener.py  setup_wizard.py  strategies.py  tracking_manager.py  tracking_syncer.py  trade_manager.py  trade_parser.py  trade_reviewer.py  tushare_client.py  watchlist.py  zettaranc_voice.py
modules/backtest/: __init__.py  _rust_bridge.py  portfolio.py  single.py
modules/core/: __init__.py  _rust_compat.py  atr.py  errors.py  market_context.py
modules/data_sync/: __main__.py  cli.py  indicator_cache.py  syncer.py
reports/: MULTIFACTOR_IMPLEMENTATION_REPORT.md
rust/: Cargo.toml  Dockerfile.test
rust/.cargo/: config.toml
rust/crates/backtest_engine/: Cargo.toml
rust/crates/backtest_engine/src/: lib.rs  portfolio.rs  single.rs
rust/crates/backtest_engine/tests/: proptest.rs  test_force_close.rs
rust/crates/bindings/: Cargo.toml
rust/crates/bindings/src/: backtest_bindings.rs  core.rs  error.rs  lib.rs
rust/crates/bindings/tests/: atr_golden.rs  test_core_rust.rs
rust/crates/core_types/: Cargo.toml
rust/crates/core_types/src/: error.rs  kline.rs  lib.rs  schema.rs
rust/crates/core_types/tests/: smoke.rs
rust/crates/grid_search/: Cargo.toml
rust/crates/grid_search/src/: lib.rs  walk_forward.rs
rust/crates/grid_search/tests/: proptest.rs
rust/crates/indicators/: Cargo.toml
rust/crates/indicators/src/: atr.rs  lib.rs
rust/crates/indicators/tests/: proptest.rs
rust/crates/screener/: Cargo.toml
rust/crates/screener/src/: lib.rs  scoring.rs
rust/crates/screener/tests/: proptest.rs
rust/scripts/: build-linux.sh  build_macos.sh  fix_linkedit_alignment.py
scripts/: batch_compute_indicators.py  batch_transcribe.py  benchmark_perf.py  eval_strategies.py  optimization_multifactor.py  optimize_for_v10_verify.py  sync_full_market.py
tests/: test_backtest.py  test_backtest_errors.py  test_backtest_multistrategy.py  test_backtest_portfolio.py  test_backtest_six_step.py  test_cli_screen.py  test_cli_simulate.py  test_cli_subparser.py  test_cli_uses_rust.py  test_core.py  test_data_e2e.py  test_data_sync_extensions.py  test_datasource.py  test_dynamic_stop_loss.py  test_e2e_multistrategy.py  test_errors.py  test_indevs_client_errors.py  test_indevs_datasource.py  test_indicators.py  test_indicators_realdata.py  test_llm_providers_errors.py  test_loop_engine.py  test_market_regime.py  test_portfolio_grid_search.py  test_quality_check.py  test_screener_errors.py  test_self_optimizer_integration.py  test_simulator.py  test_simulator_errors.py  test_simulator_metrics.py  test_simulator_strategy_adapter.py  test_strategies.py  test_tushare_client.py  test_verify_cli.py  test_verify_gates.py  test_verify_pipeline.py  test_verify_pool.py  test_verify_portfolio_engine.py  test_verify_portfolio_walk_forward.py  test_verify_registry_writer.py  (+3 more)
(+51 files in other folders)
