[package]
name = "zt_bindings"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Python bindings (PyO3) for zettaranc Rust core + pure-Rust fallback for cargo test"

# cdylib  -> maturin uses this to build the Python extension module
# rlib    -> lets `cargo test -p zt_bindings --no-default-features` link [[test]] binaries
#            (cargo's [[test]] cannot consume cdylib output directly)
[lib]
name = "_core_compute"
crate-type = ["cdylib", "rlib"]

[dependencies]
zt_core_types = { path = "../core_types" }
zt_indicators = { path = "../indicators" }
zt_backtest_engine = { path = "../backtest_engine" }
zt_grid_search = { path = "../grid_search" }
# pyo3 is optional so `cargo test --no-default-features` does NOT trigger
# pyo3's build script (which complains on Python 3.14 with pyo3 0.22, and
# would force every developer to match a specific Python version).
pyo3 = { version = "0.23", features = ["extension-module"], optional = true }
serde_json = "1.0"

[dev-dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
approx = { workspace = true }

# Feature gates:
# - default (pyo3)  -> maturin path: builds the Python extension module
# - pure-rust       -> `cargo test` path: no PyO3, no Python interpreter required
# Both features are deliberately non-mutually-exclusive in source code, but
# in practice you use exactly one:
#   maturin develop              -> uses default (pyo3 enabled)
#   cargo test -p zt_bindings --no-default-features --features pyo3
#                                  -> identical to maturin path, useful for CI
#   cargo test -p zt_bindings --no-default-features
#                                  -> pure-Rust path, no pyo3 needed
[features]
default = ["pyo3"]
pyo3 = ["dep:pyo3"]