[package]
name = "zt_core_types"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
thiserror = { workspace = true }
polars = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
